<resources>
    <string name="app_name">VHEditor</string>
    <string name="new_editor_header">New Editor Server</string>
    <string name="loading">Loading...</string>
    <string name="server_version">Server version: %s</string>
    <string name="not_installed">Not installed</string>
    <string name="install_server">Install server</string>
    <string name="update_server">Update server</string>
    <string name="reinstall_server">Reinstall server</string>
    <string name="start_code">Start Editor</string>
    <string name="new_terminal">Default Terminal</string>
    <string name="stop_code">Stop Server</string>
    <string name="dont_show_this_again">Don\'t show this again</string>
    <string name="credit"><a href="https://github.com/cdr/code-server">code-server</a> by <a href="https://coder.com/">coder</a>\n<a href="https://github.com/termux/termux-app">termux</a> by <a href="https://github.com/termux">termux community</a>\n<a href="https://github.com/vhqtvn/VHSCode-Android">UI &amp; Android version</a> by <a href="www.linkedin.com/in/vhnvn">vhnvn</a>\nIcons by kelian.elbaz44</string>
    <string name="extracting">Extracting...</string>
    <string name="stop_server">Stop</string>
    <string name="starting_server">Starting server...</string>
    <string name="please_wait_starting_server">Please wait... VSCode server is starting...</string>
    <string name="use_hard_keyboard">Use hard keyboard mode</string>
    <string name="error_title">Error</string>
    <string name="error_not_primary_user_message">Base data can only be installed on the primary user account</string>
    <string name="failed_to_run_server">Failed to run server, got exception %s</string>
    <string name="bootstrap_installer_body">Installing Termux bootstrap…</string>
    <string name="bootstrap_error_title">Unable to install</string>
    <string name="bootstrap_error_body">Termux was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">Termux can only be installed on the primary user account.</string>
    <string name="start_remote">Start remote</string>
    <string name="keep_screen_alive">Keep screen alive</string>
    <string name="settings">Settings</string>
    <string name="reset_root_fs">Reset rootfs</string>
    <string name="close">Close</string>
    <string name="deleting">Deleting...</string>
    <string name="reset_root_fs_finished">Reset rootfs finished</string>
    <string name="server_listen_on_all_interfaces">Server listen on all interfaces</string>
    <string name="editor_verbose">Verbose output</string>
    <string name="use_https">Use https</string>
    <string name="link_release"><a href="https://github.com/vhqtvn/VHEditor-Android/releases/latest">github.com/vhqtvn/VHEditor-Android</a></string>
    <string name="wrong_target_sdk"><h1>I\'m sorry!</h1>\nAndroid api version <b>28</b> is required to make termux embedding works.\nBut now Google Play <b>disabled</b> uploading applications with targetSdk 28, devices with <b>Android 10 and later can\'t use VHEditor version installed from Google Play</b>.\nPlease tap the <b>following link</b> to download latest release from VHEditor\'s github repository.</string>
    <string name="zoomValue">UI Scale: %1$d%%</string>
    <string name="fullscreen_setting">Fullscreen</string>

    <string name="new_session">New</string>
    <string name="new_session_header">New Session</string>

    <string name="tag_binding">tag_binding</string>
    <string name="tag_binding_position">tag_binding_position</string>

    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_max_editors_reached">Max Editor reached</string>
    <string name="msg_max_editors_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="use_hw_accelerate_webview">Use hardware-accelerated webview</string>
    <string name="use_virtual_mouse">Use virtual mouse</string>
    <string name="virtualMouseScaleValue">Mouse Scale: x%1$.2f</string>
    <string name="overlay_btn_menu"> Menu</string>
    <string name="overlay_btn_keyboard">&#xf11c; Toggle keyboard</string>
    <string name="overlay_btn_settings">&#xf085; Config</string>
    <string name="overlay_btn_lock_orientation_unlocked">&#xf3c1; Orientation not locking</string>
    <string name="overlay_btn_lock_orientation_locked">&#xf023; Orientation locked</string>
    <string name="initial_start_editor">Start editor by default</string>

    <string name="ignore_auto_start_notification">Autostart setting is ignored. Check if the server need to be updated.</string>
    <string name="confirm_reinstall_server">CodeServer will be reinstalled, installed packages and user files wont be deleted. Do you want to continue?</string>
    <string name="confirm_reset_rootfs">Everything except home folder will be deleted. Do you want to continue?</string>
    <string name="local_server_listen_port">Local server listen port</string>
    <string name="local_server_listen_port_help">0 or empty for random</string>

    <string name="failed_to_lock_orientation">Failed to lock orientation</string>
    <string name="overlay_btn_lock_keyboard">Auto select current keyboard</string>
    <string name="use_keyboard">Use KB: %s</string>
    <string name="failed_to_set_keyboard">Failed to set keyboard</string>
    <string name="error_failed_to_extract">Failed to extract!</string>
    <string name="copied_to_clipboard">Copied!</string>
    <string name="long_press_to_copy_full">Tap and hold to copy to clipboard.</string>

    <string name="editor_service_restart_due_to_configuration_changes">Editor service restarting to update configurations.</string>
    <string name="can_open_1_folder_in_a_single_instance_only">Only first folder opened.</string>

    <string name="acquire_wake_lock">Acquire wake lock.</string>
    <string name="release_wake_lock">Release wake lock.</string>
    <string name="acquire_wifi_lock">Acquire wifi lock.</string>
    <string name="release_wifi_lock">Release wifi lock.</string>
    <string name="locking_orientation_rewrite_write_settings">\"Modify system settings\" permission needs to be enabled!</string>
    <string name="copied">Copied!</string>
    <string name="title_reinstall_remote_cs">Reinstall/Upgrade code-server?</string>
    <string name="input_password">Input password</string>
</resources>
