<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".root.NewSessionActivity">


    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_session_header"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAppVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtAppVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtInstalledServerVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHeader"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtInstalledServerVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnInstallServer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppVersion"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnInstallServer"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_bg"
        android:onClick="onInstallServerClick"
        android:text="@string/install_server"
        android:textColor="@color/button_important"
        app:layout_constraintBottom_toTopOf="@+id/mainGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstalledServerVersion" />

    <vn.vhn.vhscode.ui.ShrinkingScrollView
        android:id="@+id/mainGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInstallServer">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNewTerminal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:onClick="onNewTerminal"
                android:text="@string/new_terminal"
                android:textColor="@color/button" />

            <Button
                android:id="@+id/btnStartCode"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:onClick="onStartCode"
                android:text="@string/start_code"
                android:textColor="@color/button" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/remoteRegionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/editTxtRemoteServer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:inputType="textUri"
                    android:text="http://127.0.0.1:13337"
                    android:textColor="@color/white"
                    app:layout_constraintBaseline_toBaselineOf="@+id/btnStartRemote"
                    app:layout_constraintEnd_toStartOf="@+id/btnStartRemote"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnStartRemote"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_bg"
                    android:onClick="onStartRemote"
                    android:text="@string/start_remote"
                    android:textColor="@color/button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTxtRemoteServer"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View style="@style/Divider" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/customTerminalReactHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </vn.vhn.vhscode.ui.ShrinkingScrollView>

    <Button
        android:id="@+id/btnSettings"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/transparent_button_bg"
        android:fontFamily="@font/fa_solid_900"
        android:onClick="onSettingsClick"
        android:text="&#xf085;"
        android:textColor="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>