<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".root.fragments.VSCodeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/webViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <vn.vhn.vhscode.chromebrowser.VSCodeBrowser
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_blue_bright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/txtServerLog"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:background="#C0000000"
            android:enabled="true"
            android:focusable="false"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:textColor="@color/log"
            android:textSize="20sp"
            android:typeface="monospace"
            app:layout_constraintBottom_toTopOf="@+id/settingsGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settingsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtServerLog"
            app:layout_constraintVertical_chainStyle="packed">

            <CheckBox
                android:id="@+id/chkUseHWA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/button"
                android:minHeight="48dp"
                android:text="@string/use_hw_accelerate_webview"
                android:textColor="@color/button"
                android:tint="@color/button" />

            <CheckBox
                android:id="@+id/chkUseVirtualMouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/button"
                android:minHeight="48dp"
                android:text="@string/use_virtual_mouse"
                android:textColor="@color/button"
                android:tint="@color/button" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/virtualMouseScaleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/virtualMouseScaleLabel"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/virtualMouseScaleValue"
                    android:textColor="@color/button"
                    android:tint="@color/button" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/virtualMouseScaleSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="20"
                    android:progressBackgroundTint="@color/button"
                    android:tint="@color/button" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <CheckBox
                android:id="@+id/chkUseHardwareKeyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="@color/button"
                android:minHeight="48dp"
                android:text="@string/use_hard_keyboard"
                android:textColor="@color/button"
                android:tint="@color/button" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/zoomScaleLabel"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/zoomValue"
                    android:textColor="@color/button"
                    android:tint="@color/button" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/zoomScaleSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="11"
                    android:progressBackgroundTint="@color/button"
                    android:tint="@color/button" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>